--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,9 @@ body {
   font-family: "Manrope", sans-serif;
 }
 h1 {
-  font-weight: 200;
-  font-size: 26px;
-  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 22px;
+  margin-bottom: 16px;
 }
 h2 {
   font-size: 36px;
@@ -22,7 +22,9 @@ h3 {
   font-weight: 600;
 }
 h4 {
-  font-weight: 800;
+  font-weight: 500;
+  font-size: 20px;
+  color: #4daff9;
 }
 hr {
   margin: 10px 0px 3px 0px;
@@ -33,7 +35,7 @@ hr {
   display: block;
   margin: 0 auto;
   margin-top: 40px;
-  padding: 60px;
+  padding: 40px 60px;
 }
 .search-button {
   padding: 6px 12px;
@@ -41,6 +43,8 @@ hr {
   border: solid 1px #4daff9;
   border-radius: 4px;
   transition: all 150ms ease-in-out;
+  position: relative;
+  left: -14px;
 }
 .search-button:hover {
   background-color: #4daff9;
@@ -52,8 +56,8 @@ hr {
   background-color: #4daff9;
   color: white;
   line-height: 24px;
-  font-size: 15px;
-  width: 140px;
+  font-size: 14px;
+  width: 160px;
   transition: all 150ms ease-in-out;
 }
 .current-location-button:hover {
@@ -94,24 +98,27 @@ hr {
   text-decoration: none;
   cursor: default;
 }
-
 .condition-and-wind {
   font-size: 13px;
 }
 .date-time {
   font-size: 12px;
   color: gray;
-  text-align: right;
+  text-align: left;
   position: relative;
-  top: 8px;
+  top: 0px;
+}
+.forecast-boxes {
+  padding: 4px;
 }
 .next-days {
   border: solid 2px aliceblue;
   border-radius: 4px;
-  padding: 20px 5px;
-  margin: 10px 0px;
+  padding: 15px 5px;
+  margin: 7px 0px;
   text-align: center;
   color: gray;
+  background-color: #f4f9fd;
   transition: all 150ms ease-in-out;
 }
 .next-days:hover {
@@ -119,7 +126,11 @@ hr {
   color: #606060;
 }
 .next-days-weather-icon {
-  padding: 20px 0;
+  padding: 8px 0;
+  font-size: 26px;
+}
+.low-temp {
+  font-weight: 200;
 }
 .code-link {
   text-align: center;
