--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
 
 body {
-  background-color: aliceblue;
+  background-color: #ffe7e0;
   font-family: "Manrope", sans-serif;
 }
 h1 {
@@ -12,19 +12,19 @@ h1 {
 h2 {
   font-size: 36px;
   font-weight: 800;
-  color: #4daff9;
+  color: #ec6e4c;
   position: relative;
   top: 4px;
 }
 h3 {
-  color: #4daff9;
+  color: #ec6e4c;
   font-size: 20px;
   font-weight: 600;
 }
 h4 {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 20px;
-  color: #4daff9;
+  color: #ec6e4c;
 }
 hr {
   margin: 10px 0px 3px 0px;
@@ -40,20 +40,20 @@ hr {
 .search-button {
   padding: 6px 12px;
   background-color: white;
-  border: solid 1px #4daff9;
+  border: solid 1px #ec6e4c;
   border-radius: 4px;
   transition: all 150ms ease-in-out;
   position: relative;
   left: -14px;
 }
 .search-button:hover {
-  background-color: #4daff9;
+  background-color: #ec6e4c;
   color: white;
 }
 .current-location-button {
   position: relative;
   left: 8px;
-  background-color: #4daff9;
+  background-color: #ec6e4c;
   color: white;
   line-height: 24px;
   font-size: 14px;
@@ -61,8 +61,8 @@ hr {
   transition: all 150ms ease-in-out;
 }
 .current-location-button:hover {
-  background: #d2ebff;
-  border-color: #4daff9;
+  background: #ffe7e0;
+  border-color: #ec6e4c;
   color: #606060;
 }
 .city-result {
@@ -112,17 +112,18 @@ hr {
   padding: 4px;
 }
 .next-days {
-  border: solid 2px aliceblue;
+  border: solid 2px #f8ebe6;
   border-radius: 4px;
   padding: 15px 5px;
   margin: 7px 0px;
   text-align: center;
   color: gray;
-  background-color: #f4f9fd;
+  background-color: #fffaf8;
   transition: all 150ms ease-in-out;
 }
 .next-days:hover {
-  background-color: aliceblue;
+  background-color: #fcf2ef;
+  border-color: #fcf2ef;
   color: #606060;
 }
 .next-days-weather-icon {
@@ -136,4 +137,8 @@ hr {
   text-align: center;
   font-size: 14px;
   margin-top: 10px;
+  color: gray;
+}
+.code-link-github {
+  color: #ec6e4c;
 }
